Remove all emojis from project files
- Removed emojis from 26 files across the project
- Total of 3,224 emoji characters removed
- Affects documentation, notebooks, Python files, and configuration
- Git history remains intact (safe operation)
- All files remain functionally identical

--- a/notebooks/Harvest_Now_Decrypt_Later_Attacks.ipynb
+++ b/notebooks/Harvest_Now_Decrypt_Later_Attacks.ipynb
@@ -5,22 +5,22 @@
    "id": "3fa1b137",
    "metadata": {},
    "source": [
-    "# 🛰️ Harvest Now, Decrypt Later (HNDL) Attacks\n",
+    "#  Harvest Now, Decrypt Later (HNDL) Attacks\n",
     "\n",
     "**Author:** Mauro Risonho de Paula Assumpção aka firebitsbr  \n",
     "**License:** MIT  \n",
     "**Date:** August 7, 2025\n",
     "\n",
-    "## 🎯 Overview\n",
+    "##  Overview\n",
     "\n",
     "The \"Harvest Now, Decrypt Later\" strategy involves collecting encrypted data today for future decryption when quantum computers become capable enough. This notebook demonstrates:\n",
     "\n",
-    "- 📡 **TLS traffic capture** and storage strategies\n",
-    "- 🔍 **Future vulnerability assessment** of captured data\n",
+    "-  **TLS traffic capture** and storage strategies\n",
+    "-  **Future vulnerability assessment** of captured data\n",
     "- ⏰ **Post-quantum migration urgency** analysis\n",
-    "- 💰 **Economic impact** of delayed decryption\n",
+    "-  **Economic impact** of delayed decryption\n",
     "\n",
-    "### ⚠️ **Legal Disclaimer**\n",
+    "###  **Legal Disclaimer**\n",
     "\n",
     "This notebook is for **authorized security testing and educational purposes only**.\n",
     "\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🛠️ Environment Setup and Imports\n",
+    "#  Environment Setup and Imports\n",
     "import sys\n",
     "import os\n",
     "import warnings\n",
@@ -57,15 +57,15 @@
     "try:\n",
     "    from quantum.backend import QuantumBackendManager\n",
     "    from payloads.decrypt_tls import TLSDecryptor\n",
-    "    print(\"✅ Houdinis modules imported successfully\")\n",
+    "    print(\" Houdinis modules imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Houdinis import error: {e}\")\n",
+    "    print(f\" Houdinis import error: {e}\")\n",
     "\n",
     "# Configuration\n",
     "plt.style.use('dark_background')\n",
     "\n",
-    "print(\"🚀 Environment setup complete!\")\n",
-    "print(f\"📅 Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "print(\" Environment setup complete!\")\n",
+    "print(f\" Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "print(\"=\" * 60)"
    ]
   },
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🛰️ HNDL Attack Simulator\n",
+    "#  HNDL Attack Simulator\n",
     "class HNDLSimulator:\n",
     "    \"\"\"Simulate harvest now decrypt later attack scenarios\"\"\"\n",
     "    \n",
@@ -94,7 +94,7 @@
     "    \n",
     "    def simulate_tls_capture(self, num_sessions=100):\n",
     "        \"\"\"Simulate TLS traffic capture\"\"\"\n",
-    "        print(\"📡 Simulating TLS traffic interception...\")\n",
+    "        print(\" Simulating TLS traffic interception...\")\n",
     "        \n",
     "        algorithms = ['RSA-2048', 'ECDH-256', 'RSA-1024', 'ECDH-384', 'DH-2048', 'RSA-4096']\n",
     "        data_types = ['financial', 'medical', 'government', 'corporate', 'personal', 'research']\n",
@@ -119,7 +119,7 @@
     "            }\n",
     "            self.captured_data.append(session)\n",
     "        \n",
-    "        print(f\"✅ Captured {len(self.captured_data)} TLS sessions\")\n",
+    "        print(f\" Captured {len(self.captured_data)} TLS sessions\")\n",
     "        return self.captured_data\n",
     "    \n",
     "    def calculate_risk_score(self, algorithm, capture_date):\n",
@@ -165,7 +165,7 @@
     "        return 5.0\n",
     "\n",
     "# Initialize HNDL simulator\n",
-    "print(\"🛰️ HNDL Attack Analysis\")\n",
+    "print(\" HNDL Attack Analysis\")\n",
     "print(\"=\" * 50)\n",
     "\n",
     "hndl = HNDLSimulator()\n",
@@ -173,7 +173,7 @@
     "# Simulate traffic capture over multiple years\n",
     "captured_sessions = hndl.simulate_tls_capture(500)\n",
     "\n",
-    "print(f\"\\n📊 Initial Capture Statistics:\")\n",
+    "print(f\"\\n Initial Capture Statistics:\")\n",
     "print(f\"  • Total sessions: {len(captured_sessions)}\")\n",
     "print(f\"  • Time range: {min(s['timestamp'] for s in captured_sessions).strftime('%Y-%m-%d')} to {max(s['timestamp'] for s in captured_sessions).strftime('%Y-%m-%d')}\")\n",
     "print(f\"  • Total data volume: {sum(s['data_size'] for s in captured_sessions) / (1024**3):.2f} GB\")"
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📊 HNDL Data Analysis\n",
+    "#  HNDL Data Analysis\n",
     "def analyze_hndl_data(sessions):\n",
     "    \"\"\"Comprehensive analysis of harvested data\"\"\"\n",
     "    \n",
@@ -259,22 +259,22 @@
     "# Perform comprehensive analysis\n",
     "analysis = analyze_hndl_data(captured_sessions)\n",
     "\n",
-    "print(\"🔍 HNDL Data Analysis Results:\")\n",
+    "print(\" HNDL Data Analysis Results:\")\n",
     "print(\"=\" * 50)\n",
     "\n",
-    "print(f\"\\n📊 Algorithm Vulnerability Breakdown:\")\n",
+    "print(f\"\\n Algorithm Vulnerability Breakdown:\")\n",
     "for algo, data in analysis['algorithm_distribution'].items():\n",
     "    risk_info = hndl.vulnerability_timeline.get(algo, {'broken': 'Unknown', 'risk_level': 'UNKNOWN'})\n",
     "    print(f\"  • {algo}: {data['count']} sessions, {data['total_size_mb']:.1f} MB\")\n",
-    "    print(f\"    └─ Break year: {risk_info['broken']}, Risk: {risk_info['risk_level']}, Avg score: {data['avg_risk']:.1f}\")\n",
+    "    print(f\"     Break year: {risk_info['broken']}, Risk: {risk_info['risk_level']}, Avg score: {data['avg_risk']:.1f}\")\n",
     "\n",
-    "print(f\"\\n📈 Data Type Intelligence Value:\")\n",
+    "print(f\"\\n Data Type Intelligence Value:\")\n",
     "sorted_data_types = sorted(analysis['data_type_distribution'].items(), \n",
     "                          key=lambda x: x[1]['avg_value'], reverse=True)\n",
     "for data_type, data in sorted_data_types:\n",
     "    print(f\"  • {data_type.capitalize()}: {data['count']} sessions, Value: {data['avg_value']:.1f}/10, Risk: {data['avg_risk']:.1f}/10\")\n",
     "\n",
-    "print(f\"\\n⚠️  Risk Distribution:\")\n",
+    "print(f\"\\n  Risk Distribution:\")\n",
     "for risk_cat, count in analysis['risk_analysis'].items():\n",
     "    percentage = (count / analysis['total_sessions']) * 100\n",
     "    print(f\"  • {risk_cat}: {count} sessions ({percentage:.1f}%)\")"
@@ -287,8 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📈 HNDL Attack Visualization\n",
-    "print(\"📈 Creating HNDL attack visualizations...\")\n",
+    "#  HNDL Attack Visualization\n",
+    "print(\" Creating HNDL attack visualizations...\")\n",
     "\n",
     "# Create comprehensive visualization dashboard\n",
     "fig = plt.figure(figsize=(20, 15))\n",
@@ -473,7 +473,7 @@
     "high_value_sessions = [s for s in captured_sessions if s['value_score'] >= 8.0]\n",
     "critical_risk_sessions = [s for s in captured_sessions if s['risk_score'] >= 9.0]\n",
     "\n",
-    "print(f\"\\n📊 HNDL Attack Summary:\")\n",
+    "print(f\"\\n HNDL Attack Summary:\")\n",
     "print(f\"  • Total data harvested: {total_size_gb:.2f} GB\")\n",
     "print(f\"  • High-value intelligence: {len(high_value_sessions)} sessions\")\n",
     "print(f\"  • Critical risk level: {len(critical_risk_sessions)} sessions\")\n",
@@ -488,8 +488,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 💰 Economic Impact and Migration Urgency Analysis\n",
-    "print(\"💰 Economic Impact and Migration Urgency Analysis\")\n",
+    "#  Economic Impact and Migration Urgency Analysis\n",
+    "print(\" Economic Impact and Migration Urgency Analysis\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "def calculate_economic_impact():\n",
@@ -582,10 +582,10 @@
     "# Perform economic analysis\n",
     "economic_impact = calculate_economic_impact()\n",
     "\n",
-    "print(\"\\n💰 Economic Impact Analysis:\")\n",
+    "print(\"\\n Economic Impact Analysis:\")\n",
     "\n",
     "# Display yearly impact\n",
-    "print(\"\\n📅 Yearly Economic Exposure:\")\n",
+    "print(\"\\n Yearly Economic Exposure:\")\n",
     "for year in [2025, 2028, 2030, 2035, 2040]:\n",
     "    if year in economic_impact['by_year']:\n",
     "        data = economic_impact['by_year'][year]\n",
@@ -593,16 +593,16 @@
     "        print(f\"  • {year}: ${impact_millions:.1f}M exposure ({data['vulnerable_sessions']} sessions)\")\n",
     "\n",
     "# Display sector impact\n",
-    "print(\"\\n🏢 Sector Impact Assessment:\")\n",
+    "print(\"\\n Sector Impact Assessment:\")\n",
     "sorted_sectors = sorted(economic_impact['by_sector'].items(), \n",
     "                       key=lambda x: x[1]['potential_impact'], reverse=True)\n",
     "for sector, data in sorted_sectors:\n",
     "    impact_millions = data['potential_impact'] / 1000000\n",
     "    print(f\"  • {sector.capitalize()}: ${impact_millions:.1f}M potential loss\")\n",
-    "    print(f\"    └─ {data['sessions']} sessions, Avg risk: {data['avg_risk']:.1f}/10\")\n",
+    "    print(f\"     {data['sessions']} sessions, Avg risk: {data['avg_risk']:.1f}/10\")\n",
     "\n",
     "# Display migration costs\n",
-    "print(\"\\n🚀 Post-Quantum Migration Cost Analysis:\")\n",
+    "print(\"\\n Post-Quantum Migration Cost Analysis:\")\n",
     "for scenario, cost in economic_impact['migration_costs'].items():\n",
     "    cost_millions = cost / 1000000\n",
     "    print(f\"  • {scenario}: ${cost_millions:.1f}M\")\n",
@@ -675,7 +675,7 @@
     "immediate_migration_cost = economic_impact['migration_costs']['Immediate (2024-2025)']\n",
     "roi_ratio = total_potential_loss / immediate_migration_cost if immediate_migration_cost > 0 else 0\n",
     "\n",
-    "print(f\"\\n🎯 Strategic Recommendations:\")\n",
+    "print(f\"\\n Strategic Recommendations:\")\n",
     "print(f\"  • Total potential exposure: ${total_potential_loss/1000000:.1f}M\")\n",
     "print(f\"  • Immediate migration cost: ${immediate_migration_cost/1000000:.1f}M\")\n",
     "print(f\"  • Return on investment: {roi_ratio:.1f}:1\")\n",
@@ -687,28 +687,28 @@
    "id": "8f39c68f",
    "metadata": {},
    "source": [
-    "## 🎯 HNDL Attack Analysis Summary\n",
+    "##  HNDL Attack Analysis Summary\n",
     "\n",
     "This notebook demonstrated:\n",
     "\n",
-    "- ✅ **Traffic Harvesting**: Large-scale encrypted data collection simulation\n",
-    "- ✅ **Vulnerability Timeline**: Algorithm-specific quantum threat assessment\n",
-    "- ✅ **Intelligence Value**: Data classification and prioritization\n",
-    "- ✅ **Economic Impact**: Financial consequences of delayed decryption\n",
+    "-  **Traffic Harvesting**: Large-scale encrypted data collection simulation\n",
+    "-  **Vulnerability Timeline**: Algorithm-specific quantum threat assessment\n",
+    "-  **Intelligence Value**: Data classification and prioritization\n",
+    "-  **Economic Impact**: Financial consequences of delayed decryption\n",
     "\n",
-    "### 🚨 **Critical Findings:**\n",
+    "###  **Critical Findings:**\n",
     "- **Massive Data Exposure**: Terabytes of encrypted data vulnerable to future quantum attacks\n",
     "- **Timeline Urgency**: RSA-1024/2048 compromised by 2025-2030\n",
     "- **High-Value Targets**: Government, financial, and medical data most at risk\n",
     "- **Economic Impact**: Millions in potential losses vs. migration costs\n",
     "\n",
-    "### 📊 **Key Insights:**\n",
+    "###  **Key Insights:**\n",
     "- **Harvest Strategy**: Adversaries are likely collecting data now for future decryption\n",
     "- **Algorithm Diversity**: Multiple cryptographic algorithms vulnerable on different timelines\n",
     "- **Geographic Scope**: Global communications infrastructure at risk\n",
     "- **Urgency Calculation**: Data age and algorithm timeline determine priority\n",
     "\n",
-    "### 🛡️ **Defensive Actions:**\n",
+    "###  **Defensive Actions:**\n",
     "- **Immediate PQ Migration**: Begin post-quantum cryptography deployment\n",
     "- **Data Classification**: Identify and prioritize high-value communications\n",
     "- **Key Rotation**: Accelerate cryptographic key rotation schedules\n",
@@ -718,9 +718,9 @@
     "The analysis shows that immediate post-quantum migration provides the best ROI, preventing significant future economic losses at a fraction of the cost of emergency migration.\n",
     "\n",
     "---\n",
-    "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
-    "**📜 License:** MIT - Use responsibly and ethically"
+    "** Contact:** mauro.risonho@gmail.com  \n",
+    "** Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
+    "** License:** MIT - Use responsibly and ethically"
    ]
   }
  ],
