--- a/notebooks/IBM_Quantum_Experience_Integration.ipynb
+++ b/notebooks/IBM_Quantum_Experience_Integration.ipynb
@@ -5,22 +5,22 @@
    "id": "484ad15f",
    "metadata": {},
    "source": [
-    "# 🌐 IBM Quantum Experience Integration\n",
+    "#  IBM Quantum Experience Integration\n",
     "\n",
     "**Author:** Mauro Risonho de Paula Assumpção aka firebitsbr  \n",
     "**License:** MIT  \n",
     "**Date:** August 7, 2025\n",
     "\n",
-    "## 🎯 Overview\n",
+    "##  Overview\n",
     "\n",
     "This notebook demonstrates IBM Quantum Experience integration with the Houdinis framework, including:\n",
     "\n",
-    "- 🔧 **Backend Configuration** and selection\n",
-    "- 🛰️ **Real Quantum Hardware** connection\n",
-    "- 📊 **Backend Information** analysis\n",
-    "- ⚡ **Performance Comparison** between simulators and real hardware\n",
+    "-  **Backend Configuration** and selection\n",
+    "-  **Real Quantum Hardware** connection\n",
+    "-  **Backend Information** analysis\n",
+    "-  **Performance Comparison** between simulators and real hardware\n",
     "\n",
-    "### ⚠️ **Legal Disclaimer**\n",
+    "###  **Legal Disclaimer**\n",
     "\n",
     "This notebook is for **authorized security testing and educational purposes only**.\n",
     "\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🛠️ Environment Setup and Imports\n",
+    "#  Environment Setup and Imports\n",
     "import sys\n",
     "import os\n",
     "import warnings\n",
@@ -53,23 +53,23 @@
     "    from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
     "    from qiskit import transpile, Aer, IBMQ\n",
     "    from qiskit.visualization import plot_histogram\n",
-    "    print(\"✅ Qiskit imported successfully\")\n",
+    "    print(\" Qiskit imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Qiskit import error: {e}\")\n",
+    "    print(f\" Qiskit import error: {e}\")\n",
     "\n",
     "# Houdinis framework imports\n",
     "try:\n",
     "    from quantum.backend import QuantumBackendManager\n",
     "    from auxiliary.quantum_config import QuantumConfig\n",
-    "    print(\"✅ Houdinis modules imported successfully\")\n",
+    "    print(\" Houdinis modules imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Houdinis import error: {e}\")\n",
+    "    print(f\" Houdinis import error: {e}\")\n",
     "\n",
     "# Configuration\n",
     "plt.style.use('dark_background')\n",
     "\n",
-    "print(\"🚀 Environment setup complete!\")\n",
-    "print(f\"📅 Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "print(\" Environment setup complete!\")\n",
+    "print(f\" Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "print(\"=\" * 60)"
    ]
   },
@@ -81,31 +81,31 @@
    "outputs": [],
    "source": [
     "# Initialize Quantum Backend Manager\n",
-    "print(\"🔧 Initializing Quantum Backend Manager...\")\n",
+    "print(\" Initializing Quantum Backend Manager...\")\n",
     "backend_manager = QuantumBackendManager()\n",
     "\n",
     "# Check available backends\n",
-    "print(\"\\n📡 Available Quantum Backends:\")\n",
+    "print(\"\\n Available Quantum Backends:\")\n",
     "backends = backend_manager.list_backends()\n",
     "for backend in backends:\n",
     "    print(f\"  • {backend}\")\n",
     "\n",
     "# Select optimal backend\n",
-    "print(\"\\n🎯 Selecting optimal backend...\")\n",
+    "print(\"\\n Selecting optimal backend...\")\n",
     "selected_backend = backend_manager.select_backend(prefer_real=False)  # Set to True for real IBM Q hardware\n",
     "print(f\"Selected backend: {selected_backend}\")\n",
     "\n",
     "# Display backend information\n",
     "if hasattr(backend_manager, 'current_backend') and backend_manager.current_backend:\n",
     "    backend = backend_manager.current_backend\n",
-    "    print(f\"\\n📊 Backend Configuration:\")\n",
+    "    print(f\"\\n Backend Configuration:\")\n",
     "    print(f\"  • Name: {backend.name()}\")\n",
     "    print(f\"  • Max qubits: {backend.configuration().n_qubits}\")\n",
     "    print(f\"  • Basis gates: {backend.configuration().basis_gates}\")\n",
     "    if hasattr(backend.configuration(), 'quantum_volume'):\n",
     "        print(f\"  • Quantum Volume: {backend.configuration().quantum_volume}\")\n",
     "\n",
-    "print(\"\\n✅ Quantum backend initialized successfully!\")"
+    "print(\"\\n Quantum backend initialized successfully!\")"
    ]
   },
   {
@@ -115,8 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🧪 Test Quantum Circuit Execution\n",
-    "print(\"🧪 Testing quantum circuit execution...\")\n",
+    "#  Test Quantum Circuit Execution\n",
+    "print(\" Testing quantum circuit execution...\")\n",
     "\n",
     "# Create a simple Bell state circuit\n",
     "qc = QuantumCircuit(2, 2)\n",
@@ -124,7 +124,7 @@
     "qc.cnot(0, 1)  # CNOT gate\n",
     "qc.measure_all()\n",
     "\n",
-    "print(f\"\\n📐 Circuit created:\")\n",
+    "print(f\"\\n Circuit created:\")\n",
     "print(f\"  • Qubits: 2\")\n",
     "print(f\"  • Gates: {qc.count_ops()}\")\n",
     "print(f\"  • Depth: {qc.depth()}\")\n",
@@ -137,10 +137,10 @@
     "    result = job.result()\n",
     "    counts = result.get_counts(transpiled_circuit)\n",
     "    \n",
-    "    print(f\"\\n📈 Execution results:\")\n",
+    "    print(f\"\\n Execution results:\")\n",
     "    for state, count in counts.items():\n",
     "        probability = count / 1024\n",
-    "        print(f\"  • |{state}⟩: {count}/1024 ({probability:.3f})\")\n",
+    "        print(f\"  • |{state}: {count}/1024 ({probability:.3f})\")\n",
     "    \n",
     "    # Visualize results\n",
     "    plt.figure(figsize=(10, 6))\n",
@@ -154,10 +154,10 @@
     "    plt.grid(True, alpha=0.3)\n",
     "    plt.show()\n",
     "    \n",
-    "    print(\"\\n✅ Quantum circuit executed successfully!\")\n",
+    "    print(\"\\n Quantum circuit executed successfully!\")\n",
     "    \n",
     "except Exception as e:\n",
-    "    print(f\"❌ Execution error: {e}\")"
+    "    print(f\" Execution error: {e}\")"
    ]
   },
   {
@@ -167,8 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📊 Backend Performance Analysis\n",
-    "print(\"📊 Analyzing backend performance...\")\n",
+    "#  Backend Performance Analysis\n",
+    "print(\" Analyzing backend performance...\")\n",
     "\n",
     "def benchmark_backend(backend, circuit, shots=1024):\n",
     "    \"\"\"Benchmark backend performance\"\"\"\n",
@@ -218,7 +218,7 @@
     "        backend = backend_manager.get_backend(backend_name)\n",
     "        \n",
     "        for circuit_name, circuit in test_circuits:\n",
-    "            print(f\"  🔄 Testing {circuit_name} on {backend_name}...\")\n",
+    "            print(f\"   Testing {circuit_name} on {backend_name}...\")\n",
     "            result = benchmark_backend(backend, circuit, shots=512)\n",
     "            \n",
     "            if result['success']:\n",
@@ -228,12 +228,12 @@
     "                    'execution_time': result['execution_time'],\n",
     "                    'qubits': circuit.num_qubits\n",
     "                })\n",
-    "                print(f\"    ✅ Completed in {result['execution_time']:.2f}s\")\n",
+    "                print(f\"     Completed in {result['execution_time']:.2f}s\")\n",
     "            else:\n",
-    "                print(f\"    ❌ Failed: {result['error']}\")\n",
+    "                print(f\"     Failed: {result['error']}\")\n",
     "                \n",
     "    except Exception as e:\n",
-    "        print(f\"  ❌ Backend {backend_name} error: {e}\")\n",
+    "        print(f\"   Backend {backend_name} error: {e}\")\n",
     "\n",
     "# Visualize benchmark results\n",
     "if benchmark_results:\n",
@@ -276,7 +276,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    \n",
-    "    print(f\"\\n📈 Benchmark Summary:\")\n",
+    "    print(f\"\\n Benchmark Summary:\")\n",
     "    print(f\"  • Backends tested: {len(df['backend'].unique())}\")\n",
     "    print(f\"  • Circuits tested: {len(df['circuit'].unique())}\")\n",
     "    print(f\"  • Total executions: {len(df)}\")\n",
@@ -284,7 +284,7 @@
     "    fastest_backend = df.loc[df['execution_time'].idxmin()]\n",
     "    print(f\"  • Fastest execution: {fastest_backend['backend']} ({fastest_backend['execution_time']:.2f}s)\")\n",
     "else:\n",
-    "    print(\"❌ No successful benchmark results\")"
+    "    print(\" No successful benchmark results\")"
    ]
   },
   {
@@ -292,25 +292,25 @@
    "id": "b6907d12",
    "metadata": {},
    "source": [
-    "## 🎯 IBM Quantum Integration Summary\n",
+    "##  IBM Quantum Integration Summary\n",
     "\n",
     "This notebook demonstrated:\n",
     "\n",
-    "- ✅ **Backend Management**: Automatic detection and selection of quantum backends\n",
-    "- ✅ **Hardware Integration**: Connection to IBM Quantum Experience\n",
-    "- ✅ **Performance Analysis**: Benchmarking different backends and circuit complexities\n",
-    "- ✅ **Fallback Mechanisms**: Graceful handling of unavailable backends\n",
+    "-  **Backend Management**: Automatic detection and selection of quantum backends\n",
+    "-  **Hardware Integration**: Connection to IBM Quantum Experience\n",
+    "-  **Performance Analysis**: Benchmarking different backends and circuit complexities\n",
+    "-  **Fallback Mechanisms**: Graceful handling of unavailable backends\n",
     "\n",
-    "### 🔧 **Configuration Tips:**\n",
+    "###  **Configuration Tips:**\n",
     "- Set `prefer_real=True` to prioritize real quantum hardware\n",
     "- Use simulators for development and testing\n",
     "- Monitor queue times for real hardware access\n",
     "- Consider circuit optimization for better performance\n",
     "\n",
     "---\n",
-    "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
-    "**📜 License:** MIT - Use responsibly and ethically"
+    "** Contact:** mauro.risonho@gmail.com  \n",
+    "** Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
+    "** License:** MIT - Use responsibly and ethically"
    ]
   }
  ],
