--- a/notebooks/Post_Quantum_Cryptography_Analysis.ipynb
+++ b/notebooks/Post_Quantum_Cryptography_Analysis.ipynb
@@ -5,22 +5,22 @@
    "id": "d9fc6fba",
    "metadata": {},
    "source": [
-    "# 🧬 Post-Quantum Cryptography Analysis\n",
+    "#  Post-Quantum Cryptography Analysis\n",
     "\n",
     "**Author:** Mauro Risonho de Paula Assumpção aka firebitsbr  \n",
     "**License:** MIT  \n",
     "**Date:** August 7, 2025\n",
     "\n",
-    "## 🎯 Overview\n",
+    "##  Overview\n",
     "\n",
     "Post-quantum cryptography (PQC) represents the future of secure communications in the quantum era. This notebook analyzes:\n",
     "\n",
-    "- 🔐 **NIST-standardized algorithms** (CRYSTALS-Kyber, CRYSTALS-Dilithium, SPHINCS+)\n",
-    "- 🚀 **Migration strategies** from classical to quantum-resistant crypto\n",
-    "- ⚡ **Performance comparisons** and security trade-offs\n",
-    "- 📊 **Implementation guidance** and best practices\n",
+    "-  **NIST-standardized algorithms** (CRYSTALS-Kyber, CRYSTALS-Dilithium, SPHINCS+)\n",
+    "-  **Migration strategies** from classical to quantum-resistant crypto\n",
+    "-  **Performance comparisons** and security trade-offs\n",
+    "-  **Implementation guidance** and best practices\n",
     "\n",
-    "### ⚠️ **Legal Disclaimer**\n",
+    "###  **Legal Disclaimer**\n",
     "\n",
     "This notebook is for **authorized security testing and educational purposes only**.\n",
     "\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🛠️ Environment Setup and Imports\n",
+    "#  Environment Setup and Imports\n",
     "import sys\n",
     "import os\n",
     "import warnings\n",
@@ -55,15 +55,15 @@
     "# Houdinis framework imports\n",
     "try:\n",
     "    from exploits.pq_migration_tools import PQMigrationTools\n",
-    "    print(\"✅ Houdinis PQ modules imported successfully\")\n",
+    "    print(\" Houdinis PQ modules imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Houdinis import error: {e}\")\n",
+    "    print(f\" Houdinis import error: {e}\")\n",
     "\n",
     "# Configuration\n",
     "plt.style.use('dark_background')\n",
     "\n",
-    "print(\"🚀 Environment setup complete!\")\n",
-    "print(f\"📅 Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "print(\" Environment setup complete!\")\n",
+    "print(f\" Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "print(\"=\" * 60)"
    ]
   },
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🧬 Post-Quantum Cryptography Analyzer\n",
+    "#  Post-Quantum Cryptography Analyzer\n",
     "class PQCAnalyzer:\n",
     "    \"\"\"Analyze post-quantum cryptography algorithms\"\"\"\n",
     "    \n",
@@ -187,13 +187,13 @@
     "        return results\n",
     "\n",
     "# Initialize PQC analyzer\n",
-    "print(\"🧬 Initializing Post-Quantum Cryptography Analyzer...\")\n",
+    "print(\" Initializing Post-Quantum Cryptography Analyzer...\")\n",
     "pqc_analyzer = PQCAnalyzer()\n",
     "\n",
-    "print(\"✅ PQC Analyzer initialized successfully!\")\n",
-    "print(f\"📊 Algorithms in database: {len(pqc_analyzer.algorithms)}\")\n",
-    "print(f\"🔐 NIST standardized: {sum(1 for a in pqc_analyzer.algorithms.values() if a.get('standardized', False))}\")\n",
-    "print(f\"⚡ Quantum-resistant: {sum(1 for a in pqc_analyzer.algorithms.values() if not a.get('quantum_vulnerable', False))}\")"
+    "print(\" PQC Analyzer initialized successfully!\")\n",
+    "print(f\" Algorithms in database: {len(pqc_analyzer.algorithms)}\")\n",
+    "print(f\" NIST standardized: {sum(1 for a in pqc_analyzer.algorithms.values() if a.get('standardized', False))}\")\n",
+    "print(f\" Quantum-resistant: {sum(1 for a in pqc_analyzer.algorithms.values() if not a.get('quantum_vulnerable', False))}\")"
    ]
   },
   {
@@ -203,18 +203,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📊 PQC Algorithm Comparison and Analysis\n",
-    "print(\"📊 Post-Quantum Cryptography Algorithm Analysis\")\n",
+    "#  PQC Algorithm Comparison and Analysis\n",
+    "print(\" Post-Quantum Cryptography Algorithm Analysis\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "# Analyze algorithm characteristics\n",
-    "print(\"\\n🔍 PQC vs Classical Algorithm Comparison:\")\n",
+    "print(\"\\n PQC vs Classical Algorithm Comparison:\")\n",
     "pqc_algos = ['CRYSTALS-Kyber', 'CRYSTALS-Dilithium', 'SPHINCS+']\n",
     "classical_algos = ['RSA', 'ECDSA']\n",
     "\n",
     "for algo_name in pqc_algos + classical_algos:\n",
     "    algo = pqc_analyzer.algorithms[algo_name]\n",
-    "    status = \"✅ Quantum-Safe\" if not algo.get('quantum_vulnerable', False) else \"❌ Quantum-Vulnerable\"\n",
+    "    status = \" Quantum-Safe\" if not algo.get('quantum_vulnerable', False) else \" Quantum-Vulnerable\"\n",
     "    print(f\"\\n{algo_name}:\")\n",
     "    print(f\"  • Type: {algo['type']}\")\n",
     "    print(f\"  • Security basis: {algo['security_category']}\")\n",
@@ -229,10 +229,10 @@
     "    for variant, details in algo['variants'].items():\n",
     "        q_sec = details['quantum_security']\n",
     "        c_sec = details['classical_security']\n",
-    "        print(f\"    └─ {variant}: {details['key_size']} bytes, Q-sec: {q_sec}, C-sec: {c_sec}\")\n",
+    "        print(f\"     {variant}: {details['key_size']} bytes, Q-sec: {q_sec}, C-sec: {c_sec}\")\n",
     "\n",
     "# Performance benchmarking\n",
-    "print(\"\\n🚀 Performance Benchmark Simulation:\")\n",
+    "print(\"\\n Performance Benchmark Simulation:\")\n",
     "benchmark_results = {}\n",
     "\n",
     "for algo_name in ['CRYSTALS-Kyber', 'CRYSTALS-Dilithium', 'SPHINCS+', 'RSA', 'ECDSA']:\n",
@@ -261,8 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📈 PQC Visualization and Analysis\n",
-    "print(\"📈 Creating comprehensive PQC analysis visualizations...\")\n",
+    "#  PQC Visualization and Analysis\n",
+    "print(\" Creating comprehensive PQC analysis visualizations...\")\n",
     "\n",
     "# Create comprehensive visualization dashboard\n",
     "fig = plt.figure(figsize=(20, 15))\n",
@@ -497,7 +497,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\n✅ Comprehensive PQC analysis visualization completed!\")"
+    "print(\"\\n Comprehensive PQC analysis visualization completed!\")"
    ]
   },
   {
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🚀 PQC Migration Strategy and Recommendations\n",
+    "#  PQC Migration Strategy and Recommendations\n",
     "def analyze_migration_strategy():\n",
     "    \"\"\"Analyze migration strategy from classical to post-quantum crypto\"\"\"\n",
     "    migration_plan = {\n",
@@ -562,7 +562,7 @@
     "    }\n",
     "    return migration_plan\n",
     "\n",
-    "print(\"🚀 Post-Quantum Migration Strategy Analysis\")\n",
+    "print(\" Post-Quantum Migration Strategy Analysis\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "migration_plan = analyze_migration_strategy()\n",
@@ -570,13 +570,13 @@
     "# Display comprehensive migration strategy\n",
     "for phase, details in migration_plan.items():\n",
     "    print(f\"\\n{phase}:\")\n",
-    "    print(f\"  🚨 Priority: {details['priority']}\")\n",
+    "    print(f\"   Priority: {details['priority']}\")\n",
     "    print(f\"  ⏰ Timeline: {details['timeline']}\")\n",
-    "    print(f\"  💰 Estimated cost: {details['estimated_cost']}\")\n",
-    "    print(f\"  🛡️ Risk reduction: {details['risk_reduction']}\")\n",
-    "    print(f\"  🔐 Recommended algorithms: {', '.join(details['algorithms'])}\")\n",
-    "    print(f\"  🎯 Primary use cases: {', '.join(details['use_cases'])}\")\n",
-    "    print(f\"  📋 Key actions:\")\n",
+    "    print(f\"   Estimated cost: {details['estimated_cost']}\")\n",
+    "    print(f\"   Risk reduction: {details['risk_reduction']}\")\n",
+    "    print(f\"   Recommended algorithms: {', '.join(details['algorithms'])}\")\n",
+    "    print(f\"   Primary use cases: {', '.join(details['use_cases'])}\")\n",
+    "    print(f\"   Key actions:\")\n",
     "    for action in details['actions']:\n",
     "        print(f\"    • {action}\")\n",
     "\n",
@@ -649,21 +649,21 @@
     "\n",
     "org_recommendations = generate_org_specific_recommendations()\n",
     "\n",
-    "print(\"\\n🏢 Organization-Specific Migration Recommendations:\")\n",
+    "print(\"\\n Organization-Specific Migration Recommendations:\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "for org_type, rec in org_recommendations.items():\n",
     "    print(f\"\\n{org_type}:\")\n",
-    "    print(f\"  🚨 Priority Level: {rec['priority']}\")\n",
+    "    print(f\"   Priority Level: {rec['priority']}\")\n",
     "    print(f\"  ⏰ Recommended Timeline: {rec['timeline']}\")\n",
-    "    print(f\"  🔐 Primary Algorithms: {', '.join(rec['primary_algorithms'])}\")\n",
-    "    print(f\"  🎯 Critical Systems: {', '.join(rec['critical_systems'])}\")\n",
-    "    print(f\"  ⚠️ Special Considerations:\")\n",
+    "    print(f\"   Primary Algorithms: {', '.join(rec['primary_algorithms'])}\")\n",
+    "    print(f\"   Critical Systems: {', '.join(rec['critical_systems'])}\")\n",
+    "    print(f\"   Special Considerations:\")\n",
     "    for consideration in rec['special_considerations']:\n",
     "        print(f\"    • {consideration}\")\n",
     "\n",
     "# Final strategic recommendations\n",
-    "print(\"\\n🎯 Strategic PQC Implementation Recommendations:\")\n",
+    "print(\"\\n Strategic PQC Implementation Recommendations:\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "strategic_recommendations = [\n",
@@ -682,7 +682,7 @@
     "for recommendation in strategic_recommendations:\n",
     "    print(f\"  {recommendation}\")\n",
     "\n",
-    "print(\"\\n⚠️ Critical Success Factors:\")\n",
+    "print(\"\\n Critical Success Factors:\")\n",
     "success_factors = [\n",
     "    \"Executive leadership commitment and support\",\n",
     "    \"Adequate budget allocation for migration costs\",\n",
@@ -697,23 +697,23 @@
     "for factor in success_factors:\n",
     "    print(f\"  • {factor}\")\n",
     "\n",
-    "print(\"\\n📊 Migration Readiness Assessment Questions:\")\n",
+    "print(\"\\n Migration Readiness Assessment Questions:\")\n",
     "readiness_questions = [\n",
-    "    \"❓ Have you inventoried all cryptographic implementations in your organization?\",\n",
-    "    \"❓ Do you understand the quantum threat timeline for your industry?\",\n",
-    "    \"❓ Have you identified high-priority systems for early migration?\",\n",
-    "    \"❓ Do you have budget allocated for post-quantum migration?\",\n",
-    "    \"❓ Are your vendors prepared to support post-quantum algorithms?\",\n",
-    "    \"❓ Do you have staff trained in post-quantum cryptography?\",\n",
-    "    \"❓ Have you tested PQ algorithms in your environment?\",\n",
-    "    \"❓ Do you have a communication plan for stakeholders?\"\n",
+    "    \" Have you inventoried all cryptographic implementations in your organization?\",\n",
+    "    \" Do you understand the quantum threat timeline for your industry?\",\n",
+    "    \" Have you identified high-priority systems for early migration?\",\n",
+    "    \" Do you have budget allocated for post-quantum migration?\",\n",
+    "    \" Are your vendors prepared to support post-quantum algorithms?\",\n",
+    "    \" Do you have staff trained in post-quantum cryptography?\",\n",
+    "    \" Have you tested PQ algorithms in your environment?\",\n",
+    "    \" Do you have a communication plan for stakeholders?\"\n",
     "]\n",
     "\n",
     "for question in readiness_questions:\n",
     "    print(f\"  {question}\")\n",
     "\n",
-    "print(\"\\n✅ Post-Quantum Cryptography Analysis Complete!\")\n",
-    "print(\"\\n🔮 The quantum future is approaching - start your PQ journey today!\")"
+    "print(\"\\n Post-Quantum Cryptography Analysis Complete!\")\n",
+    "print(\"\\n The quantum future is approaching - start your PQ journey today!\")"
    ]
   },
   {
@@ -721,38 +721,38 @@
    "id": "d8084b49",
    "metadata": {},
    "source": [
-    "## 🎯 Post-Quantum Cryptography Analysis Summary\n",
+    "##  Post-Quantum Cryptography Analysis Summary\n",
     "\n",
     "This notebook provided:\n",
     "\n",
-    "- ✅ **NIST Standards Analysis**: Comprehensive review of standardized PQ algorithms\n",
-    "- ✅ **Performance Benchmarking**: Detailed performance comparison vs classical crypto\n",
-    "- ✅ **Migration Planning**: Phased implementation strategy and timeline\n",
-    "- ✅ **Organization-Specific Guidance**: Tailored recommendations by industry sector\n",
+    "-  **NIST Standards Analysis**: Comprehensive review of standardized PQ algorithms\n",
+    "-  **Performance Benchmarking**: Detailed performance comparison vs classical crypto\n",
+    "-  **Migration Planning**: Phased implementation strategy and timeline\n",
+    "-  **Organization-Specific Guidance**: Tailored recommendations by industry sector\n",
     "\n",
-    "### 🔐 **NIST Standardized Algorithms:**\n",
+    "###  **NIST Standardized Algorithms:**\n",
     "- **CRYSTALS-Kyber**: Key encapsulation mechanism (lattice-based)\n",
     "- **CRYSTALS-Dilithium**: Digital signatures (lattice-based)\n",
     "- **SPHINCS+**: Digital signatures (hash-based)\n",
     "\n",
-    "### 📊 **Key Findings:**\n",
+    "###  **Key Findings:**\n",
     "- **Security**: PQ algorithms provide quantum resistance at comparable classical security levels\n",
     "- **Performance**: Some trade-offs in speed, but acceptable for most applications\n",
     "- **Key Sizes**: Generally larger than classical algorithms, but manageable\n",
     "- **Maturity**: NIST standards are ready for production deployment\n",
     "\n",
-    "### 🚀 **Migration Strategy:**\n",
+    "###  **Migration Strategy:**\n",
     "1. **Phase 1 (2024-2025)**: Critical systems with hybrid classical/PQ\n",
     "2. **Phase 2 (2025-2027)**: Broad organizational migration\n",
     "3. **Phase 3 (2027-2030)**: Complete transition and optimization\n",
     "\n",
-    "### ⚠️ **Critical Actions:**\n",
+    "###  **Critical Actions:**\n",
     "- **Start Now**: Post-quantum migration should begin immediately\n",
     "- **Hybrid Approach**: Use classical/PQ hybrid during transition\n",
     "- **Algorithm Agility**: Design for easy algorithm updates\n",
     "- **Comprehensive Testing**: Validate PQ performance in your environment\n",
     "\n",
-    "### 💰 **Cost-Benefit Analysis:**\n",
+    "###  **Cost-Benefit Analysis:**\n",
     "- **Immediate Migration**: Higher upfront cost, maximum risk reduction\n",
     "- **Delayed Migration**: Lower initial cost, much higher emergency migration costs\n",
     "- **ROI**: Early migration provides best return on investment\n",
@@ -760,9 +760,9 @@
     "The transition to post-quantum cryptography is not optional—it's a quantum security imperative!\n",
     "\n",
     "---\n",
-    "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
-    "**📜 License:** MIT - Use responsibly and ethically"
+    "** Contact:** mauro.risonho@gmail.com  \n",
+    "** Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
+    "** License:** MIT - Use responsibly and ethically"
    ]
   }
  ],
