--- a/notebooks/Quantum_Machine_Learning_Cryptanalysis.ipynb
+++ b/notebooks/Quantum_Machine_Learning_Cryptanalysis.ipynb
@@ -5,22 +5,22 @@
    "id": "724bb294",
    "metadata": {},
    "source": [
-    "# 🤖 Quantum Machine Learning in Cryptanalysis\n",
+    "#  Quantum Machine Learning in Cryptanalysis\n",
     "\n",
     "**Author:** Mauro Risonho de Paula Assumpção aka firebitsbr  \n",
     "**License:** MIT  \n",
     "**Date:** August 7, 2025\n",
     "\n",
-    "## 🎯 Overview\n",
+    "##  Overview\n",
     "\n",
     "Quantum Machine Learning (QML) represents the intersection of quantum computing and artificial intelligence in cryptographic analysis. This notebook explores:\n",
     "\n",
-    "- 🧠 **Quantum Neural Networks** for pattern recognition in encrypted data\n",
-    "- 🔍 **Variational Quantum Classifiers** for cryptographic key classification\n",
-    "- 📊 **Quantum Feature Maps** for enhanced cryptanalysis\n",
-    "- ⚡ **Quantum Advantage** in machine learning-based attacks\n",
+    "-  **Quantum Neural Networks** for pattern recognition in encrypted data\n",
+    "-  **Variational Quantum Classifiers** for cryptographic key classification\n",
+    "-  **Quantum Feature Maps** for enhanced cryptanalysis\n",
+    "-  **Quantum Advantage** in machine learning-based attacks\n",
     "\n",
-    "### ⚠️ **Legal Disclaimer**\n",
+    "###  **Legal Disclaimer**\n",
     "\n",
     "This notebook is for **authorized security testing and educational purposes only**.\n",
     "\n",
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🛠️ Environment Setup and Imports\n",
+    "#  Environment Setup and Imports\n",
     "import sys\n",
     "import os\n",
     "import warnings\n",
@@ -60,25 +60,25 @@
     "    from qiskit_machine_learning.neural_networks import CircuitQNN\n",
     "    from qiskit_aer import AerSimulator\n",
     "    QISKIT_AVAILABLE = True\n",
-    "    print(\"✅ Qiskit ML components imported successfully\")\n",
+    "    print(\" Qiskit ML components imported successfully\")\n",
     "except ImportError as e:\n",
     "    QISKIT_AVAILABLE = False\n",
-    "    print(f\"⚠️ Qiskit ML not available: {e}\")\n",
-    "    print(\"📝 Running in simulation mode with classical alternatives\")\n",
+    "    print(f\" Qiskit ML not available: {e}\")\n",
+    "    print(\" Running in simulation mode with classical alternatives\")\n",
     "\n",
     "# Houdinis framework imports\n",
     "try:\n",
     "    from quantum.simulator import QuantumSimulator\n",
     "    from quantum.backend import QuantumBackend\n",
-    "    print(\"✅ Houdinis ML modules imported successfully\")\n",
+    "    print(\" Houdinis ML modules imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"❌ Houdinis import error: {e}\")\n",
+    "    print(f\" Houdinis import error: {e}\")\n",
     "\n",
     "# Configuration\n",
     "plt.style.use('dark_background')\n",
     "\n",
-    "print(\"🚀 Quantum ML environment setup complete!\")\n",
-    "print(f\"📅 Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "print(\" Quantum ML environment setup complete!\")\n",
+    "print(f\" Session started: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "print(\"=\" * 60)"
    ]
   },
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🧠 Quantum Machine Learning Cryptanalysis Engine\n",
+    "#  Quantum Machine Learning Cryptanalysis Engine\n",
     "class QuantumMLCryptanalysis:\n",
     "    \"\"\"Quantum Machine Learning for cryptographic analysis\"\"\"\n",
     "    \n",
@@ -191,7 +191,7 @@
     "        y_train, y_test = y[:train_size], y[train_size:]\n",
     "        \n",
     "        # Simulate training process\n",
-    "        print(f\"🧠 Training QNN on {dataset_name} dataset...\")\n",
+    "        print(f\" Training QNN on {dataset_name} dataset...\")\n",
     "        \n",
     "        # Simulate training iterations\n",
     "        training_losses = []\n",
@@ -253,13 +253,13 @@
     "        return comparison_results\n",
     "\n",
     "# Initialize Quantum ML system\n",
-    "print(\"🧠 Initializing Quantum Machine Learning Cryptanalysis...\")\n",
+    "print(\" Initializing Quantum Machine Learning Cryptanalysis...\")\n",
     "qml_crypto = QuantumMLCryptanalysis(num_qubits=4)\n",
     "\n",
-    "print(\"✅ Quantum ML system initialized!\")\n",
-    "print(f\"🔢 Quantum register size: {qml_crypto.num_qubits} qubits\")\n",
-    "print(f\"📊 Available datasets: {list(qml_crypto.datasets.keys())}\")\n",
-    "print(f\"🎯 Total training samples: {sum(len(d['X']) for d in qml_crypto.datasets.values())}\")"
+    "print(\" Quantum ML system initialized!\")\n",
+    "print(f\" Quantum register size: {qml_crypto.num_qubits} qubits\")\n",
+    "print(f\" Available datasets: {list(qml_crypto.datasets.keys())}\")\n",
+    "print(f\" Total training samples: {sum(len(d['X']) for d in qml_crypto.datasets.values())}\")"
    ]
   },
   {
@@ -269,8 +269,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🎯 Quantum ML Training and Analysis\n",
-    "print(\"🎯 Quantum Machine Learning Training and Analysis\")\n",
+    "#  Quantum ML Training and Analysis\n",
+    "print(\" Quantum Machine Learning Training and Analysis\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "# Train QML models on all datasets\n",
@@ -282,32 +282,32 @@
     "}\n",
     "\n",
     "for dataset_name in qml_crypto.datasets.keys():\n",
-    "    print(f\"\\n🧠 Training on {dataset_descriptions[dataset_name]}...\")\n",
+    "    print(f\"\\n Training on {dataset_descriptions[dataset_name]}...\")\n",
     "    result = qml_crypto.simulate_quantum_neural_network(dataset_name)\n",
     "    qml_results[dataset_name] = result\n",
     "    \n",
-    "    print(f\"  📊 Training samples: {result['train_size']}\")\n",
-    "    print(f\"  🧪 Test samples: {result['test_size']}\")\n",
-    "    print(f\"  🎯 Features: {result['num_features']}\")\n",
-    "    print(f\"  ✅ Final test accuracy: {result['test_accuracy']:.3f}\")\n",
-    "    print(f\"  📈 Final training loss: {result['training_losses'][-1]:.3f}\")\n",
+    "    print(f\"   Training samples: {result['train_size']}\")\n",
+    "    print(f\"   Test samples: {result['test_size']}\")\n",
+    "    print(f\"   Features: {result['num_features']}\")\n",
+    "    print(f\"   Final test accuracy: {result['test_accuracy']:.3f}\")\n",
+    "    print(f\"   Final training loss: {result['training_losses'][-1]:.3f}\")\n",
     "\n",
     "# Compare quantum vs classical ML\n",
-    "print(\"\\n⚡ Quantum vs Classical ML Comparison:\")\n",
+    "print(\"\\n Quantum vs Classical ML Comparison:\")\n",
     "comparison = qml_crypto.compare_quantum_classical_ml()\n",
     "\n",
     "for dataset_name, comp_result in comparison.items():\n",
     "    print(f\"\\n{dataset_descriptions[dataset_name]}:\")\n",
-    "    print(f\"  🔵 Quantum ML accuracy: {comp_result['quantum_accuracy']:.3f}\")\n",
-    "    print(f\"  🔴 Classical ML accuracy: {comp_result['classical_accuracy']:.3f}\")\n",
-    "    print(f\"  ⚡ Quantum advantage: +{comp_result['quantum_advantage']:.3f}\")\n",
-    "    print(f\"  ⏱️ Training time (Quantum): {comp_result['training_time_quantum']:.1f}s\")\n",
-    "    print(f\"  ⏱️ Training time (Classical): {comp_result['training_time_classical']:.1f}s\")\n",
-    "    print(f\"  🔧 Circuit depth: {comp_result['quantum_circuit_depth']} gates\")\n",
-    "    print(f\"  📏 Classical model size: {comp_result['classical_model_size']} parameters\")\n",
+    "    print(f\"   Quantum ML accuracy: {comp_result['quantum_accuracy']:.3f}\")\n",
+    "    print(f\"   Classical ML accuracy: {comp_result['classical_accuracy']:.3f}\")\n",
+    "    print(f\"   Quantum advantage: +{comp_result['quantum_advantage']:.3f}\")\n",
+    "    print(f\"  ⏱ Training time (Quantum): {comp_result['training_time_quantum']:.1f}s\")\n",
+    "    print(f\"  ⏱ Training time (Classical): {comp_result['training_time_classical']:.1f}s\")\n",
+    "    print(f\"   Circuit depth: {comp_result['quantum_circuit_depth']} gates\")\n",
+    "    print(f\"   Classical model size: {comp_result['classical_model_size']} parameters\")\n",
     "\n",
     "# Analyze quantum feature mapping advantages\n",
-    "print(\"\\n🗺️ Quantum Feature Mapping Analysis:\")\n",
+    "print(\"\\n Quantum Feature Mapping Analysis:\")\n",
     "feature_advantages = {\n",
     "    'Exponential State Space': 'Quantum systems can represent 2^n states with n qubits',\n",
     "    'Quantum Entanglement': 'Capture complex correlations between cryptographic features',\n",
@@ -328,8 +328,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📊 Quantum ML Visualization and Performance Analysis\n",
-    "print(\"📊 Creating Quantum ML analysis visualizations...\")\n",
+    "#  Quantum ML Visualization and Performance Analysis\n",
+    "print(\" Creating Quantum ML analysis visualizations...\")\n",
     "\n",
     "# Create comprehensive visualization dashboard\n",
     "fig = plt.figure(figsize=(20, 15))\n",
@@ -514,7 +514,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\n✅ Quantum ML analysis visualization completed!\")"
+    "print(\"\\n Quantum ML analysis visualization completed!\")"
    ]
   },
   {
@@ -524,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🔬 Advanced Quantum ML Cryptanalysis Techniques\n",
+    "#  Advanced Quantum ML Cryptanalysis Techniques\n",
     "def analyze_quantum_ml_techniques():\n",
     "    \"\"\"Analyze advanced QML techniques for cryptanalysis\"\"\"\n",
     "    \n",
@@ -617,7 +617,7 @@
     "    \n",
     "    return techniques\n",
     "\n",
-    "print(\"🔬 Advanced Quantum ML Cryptanalysis Techniques\")\n",
+    "print(\" Advanced Quantum ML Cryptanalysis Techniques\")\n",
     "print(\"=\" * 60)\n",
     "\n",
     "qml_techniques = analyze_quantum_ml_techniques()\n",
@@ -625,18 +625,18 @@
     "# Display detailed analysis of each technique\n",
     "for technique_name, details in qml_techniques.items():\n",
     "    print(f\"\\n{technique_name}:\")\n",
-    "    print(f\"  📝 Description: {details['description']}\")\n",
-    "    print(f\"  ⚡ Quantum Advantage: {details['quantum_advantage']}\")\n",
-    "    print(f\"  🔧 Complexity: {details['complexity']}\")\n",
-    "    print(f\"  📊 Effectiveness: {details['effectiveness']:.2f}/1.0\")\n",
-    "    print(f\"  🏗️ Implementation Difficulty: {details['implementation_difficulty']}\")\n",
-    "    print(f\"  💾 Resource Requirements: {details['resource_requirements']}\")\n",
-    "    print(f\"  🎯 Applications:\")\n",
+    "    print(f\"   Description: {details['description']}\")\n",
+    "    print(f\"   Quantum Advantage: {details['quantum_advantage']}\")\n",
+    "    print(f\"   Complexity: {details['complexity']}\")\n",
+    "    print(f\"   Effectiveness: {details['effectiveness']:.2f}/1.0\")\n",
+    "    print(f\"   Implementation Difficulty: {details['implementation_difficulty']}\")\n",
+    "    print(f\"   Resource Requirements: {details['resource_requirements']}\")\n",
+    "    print(f\"   Applications:\")\n",
     "    for app in details['applications']:\n",
     "        print(f\"    • {app}\")\n",
     "\n",
     "# Analyze implementation challenges and solutions\n",
-    "print(\"\\n⚠️ Implementation Challenges and Solutions:\")\n",
+    "print(\"\\n Implementation Challenges and Solutions:\")\n",
     "challenges = {\n",
     "    'Noise and Decoherence': {\n",
     "        'problem': 'Quantum noise affects ML model accuracy',\n",
@@ -687,30 +687,30 @@
     "\n",
     "for challenge, details in challenges.items():\n",
     "    print(f\"\\n{challenge}:\")\n",
-    "    print(f\"  ❌ Problem: {details['problem']}\")\n",
-    "    print(f\"  ✅ Solutions:\")\n",
+    "    print(f\"   Problem: {details['problem']}\")\n",
+    "    print(f\"   Solutions:\")\n",
     "    for solution in details['solutions']:\n",
     "        print(f\"    • {solution}\")\n",
     "\n",
     "# Future directions and recommendations\n",
-    "print(\"\\n🔮 Future Directions in Quantum ML Cryptanalysis:\")\n",
+    "print(\"\\n Future Directions in Quantum ML Cryptanalysis:\")\n",
     "future_directions = [\n",
-    "    \"🧬 **Quantum-Classical Hybrid Models**: Combine classical and quantum components for optimal performance\",\n",
-    "    \"🌐 **Distributed Quantum ML**: Use multiple quantum devices for large-scale cryptanalysis\",\n",
-    "    \"🔄 **Quantum Transfer Learning**: Adapt pre-trained quantum models to new cryptographic tasks\",\n",
-    "    \"🎯 **Adversarial Quantum ML**: Develop robust quantum models against adversarial attacks\",\n",
-    "    \"⚡ **Quantum Speedup Verification**: Rigorous proof of quantum advantage in cryptanalysis\",\n",
-    "    \"🔐 **Post-Quantum ML Security**: Protect quantum ML models from quantum attacks\",\n",
-    "    \"📊 **Quantum Data Analytics**: Advanced quantum algorithms for cryptographic big data\",\n",
-    "    \"🤖 **Autonomous Quantum Systems**: Self-optimizing quantum cryptanalysis platforms\",\n",
-    "    \"🌌 **Quantum Generative Models**: Generate synthetic cryptographic data for training\",\n",
-    "    \"🔬 **Quantum Explainable AI**: Understand how quantum ML makes cryptanalytic decisions\"\n",
+    "    \" **Quantum-Classical Hybrid Models**: Combine classical and quantum components for optimal performance\",\n",
+    "    \" **Distributed Quantum ML**: Use multiple quantum devices for large-scale cryptanalysis\",\n",
+    "    \" **Quantum Transfer Learning**: Adapt pre-trained quantum models to new cryptographic tasks\",\n",
+    "    \" **Adversarial Quantum ML**: Develop robust quantum models against adversarial attacks\",\n",
+    "    \" **Quantum Speedup Verification**: Rigorous proof of quantum advantage in cryptanalysis\",\n",
+    "    \" **Post-Quantum ML Security**: Protect quantum ML models from quantum attacks\",\n",
+    "    \" **Quantum Data Analytics**: Advanced quantum algorithms for cryptographic big data\",\n",
+    "    \" **Autonomous Quantum Systems**: Self-optimizing quantum cryptanalysis platforms\",\n",
+    "    \" **Quantum Generative Models**: Generate synthetic cryptographic data for training\",\n",
+    "    \" **Quantum Explainable AI**: Understand how quantum ML makes cryptanalytic decisions\"\n",
     "]\n",
     "\n",
     "for direction in future_directions:\n",
     "    print(f\"  {direction}\")\n",
     "\n",
-    "print(\"\\n🎯 Practical Implementation Recommendations:\")\n",
+    "print(\"\\n Practical Implementation Recommendations:\")\n",
     "recommendations = [\n",
     "    \"1. **Start with Simulation**: Use classical quantum simulators before quantum hardware\",\n",
     "    \"2. **Hybrid Approaches**: Combine classical and quantum ML for near-term advantages\",\n",
@@ -725,8 +725,8 @@
     "for recommendation in recommendations:\n",
     "    print(f\"  {recommendation}\")\n",
     "\n",
-    "print(\"\\n✅ Advanced Quantum ML Cryptanalysis Analysis Complete!\")\n",
-    "print(\"\\n🌟 The quantum revolution in machine learning is transforming cryptanalysis!\")"
+    "print(\"\\n Advanced Quantum ML Cryptanalysis Analysis Complete!\")\n",
+    "print(\"\\n The quantum revolution in machine learning is transforming cryptanalysis!\")"
    ]
   },
   {
@@ -734,46 +734,46 @@
    "id": "8631ddcd",
    "metadata": {},
    "source": [
-    "## 🎯 Quantum Machine Learning in Cryptanalysis Summary\n",
+    "##  Quantum Machine Learning in Cryptanalysis Summary\n",
     "\n",
     "This notebook demonstrated:\n",
     "\n",
-    "- ✅ **Quantum Neural Networks**: Advanced pattern recognition for cryptographic analysis\n",
-    "- ✅ **Variational Quantum Classifiers**: Key strength and algorithm classification\n",
-    "- ✅ **Quantum Feature Maps**: Enhanced representation of cryptographic data\n",
-    "- ✅ **Performance Analysis**: Quantum advantage over classical ML approaches\n",
+    "-  **Quantum Neural Networks**: Advanced pattern recognition for cryptographic analysis\n",
+    "-  **Variational Quantum Classifiers**: Key strength and algorithm classification\n",
+    "-  **Quantum Feature Maps**: Enhanced representation of cryptographic data\n",
+    "-  **Performance Analysis**: Quantum advantage over classical ML approaches\n",
     "\n",
-    "### 🧠 **Key QML Techniques:**\n",
+    "###  **Key QML Techniques:**\n",
     "- **VQC**: Variational quantum classifiers for key and algorithm classification\n",
     "- **QSVM**: Quantum support vector machines for pattern recognition\n",
     "- **QNN**: Quantum neural networks for deep cryptanalysis\n",
     "- **QAOA**: Quantum optimization for cryptographic problems\n",
     "\n",
-    "### 📊 **Demonstrated Applications:**\n",
+    "###  **Demonstrated Applications:**\n",
     "- **Weak vs Strong Key Classification**: 92% accuracy with quantum advantage\n",
     "- **Cipher Type Recognition**: Multi-class classification of AES/DES/RSA\n",
     "- **Side-Channel Analysis**: Power consumption pattern recognition\n",
     "- **Attack Success Enhancement**: Improved success rates across attack vectors\n",
     "\n",
-    "### ⚡ **Quantum Advantages:**\n",
+    "###  **Quantum Advantages:**\n",
     "- **Exponential State Space**: 2^n states with n qubits\n",
     "- **Quantum Entanglement**: Capture complex feature correlations\n",
     "- **Superposition**: Process multiple patterns simultaneously\n",
     "- **Quantum Interference**: Enhance signal while suppressing noise\n",
     "\n",
-    "### 🔬 **Implementation Challenges:**\n",
+    "###  **Implementation Challenges:**\n",
     "- **Noise and Decoherence**: Quantum error mitigation required\n",
     "- **Limited Hardware**: Current quantum computers have constraints\n",
     "- **Data Encoding**: Efficient classical-to-quantum data conversion\n",
     "- **Training Complexity**: Optimization in quantum parameter space\n",
     "\n",
-    "### 🚀 **Future Directions:**\n",
+    "###  **Future Directions:**\n",
     "- **Hybrid Quantum-Classical**: Optimal combination of both paradigms\n",
     "- **Distributed Quantum ML**: Multi-device quantum computation\n",
     "- **Quantum Transfer Learning**: Efficient model adaptation\n",
     "- **Adversarial Robustness**: Secure quantum ML models\n",
     "\n",
-    "### 🎯 **Practical Recommendations:**\n",
+    "###  **Practical Recommendations:**\n",
     "1. **Start with Simulation**: Classical quantum simulators for development\n",
     "2. **Hybrid Approaches**: Combine classical and quantum methods\n",
     "3. **Focus on Advantage**: Target applications with clear quantum benefits\n",
@@ -782,9 +782,9 @@
     "Quantum Machine Learning represents the frontier of intelligent cryptanalysis!\n",
     "\n",
     "---\n",
-    "**📧 Contact:** mauro.risonho@gmail.com  \n",
-    "**🌐 Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
-    "**📜 License:** MIT - Use responsibly and ethically"
+    "** Contact:** mauro.risonho@gmail.com  \n",
+    "** Project:** [Houdinis Framework](https://github.com/firebitsbr/Houdinis)  \n",
+    "** License:** MIT - Use responsibly and ethically"
    ]
   }
  ],
